--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CardProject",
+  "name": "cardproject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-material-ripple": "^0.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "styled-components": "^6.0.7"
@@ -26,6 +27,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-material-ripple": "^0.9.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
