--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
