--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-svg": "^13.12.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
